--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "Cuda-PSD-to-HTML-Template",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "production": "set NODE_ENV=production&&gulp build"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Igor Yovka",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
